--- a/Okaj/2/Sequrity/finalproject/src/app/navbar/navbar.component.html
+++ b/Okaj/2/Sequrity/finalproject/src/app/navbar/navbar.component.html
@@ -24,6 +24,9 @@
             <fa-icon [icon]="faSignInAlt"></fa-icon> Login
           </a>
         </li>
+
+
+
         <!-- <ng-container *ngIf="userRole === 'Admin'"> -->
         <!-- <li class="nav-item">
           <a class="nav-link" href="/createCategory">
@@ -167,6 +170,25 @@
           </ul>
         </div>
 
+        <!-- <div class="dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Customer
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="productDropdown">
+            <li>
+              <a class="dropdown-item" href="/viewcutomer">
+                Customer
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/createcustomer">
+                Create Customer
+              </a>
+            </li>
+          </ul>
+        </div> -->
+
         <div class="dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
@@ -181,6 +203,25 @@
             <li>
               <a class="dropdown-item" href="/createcustomer">
                 Create Customer
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="dropdown">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Branch
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="productDropdown">
+            <li>
+              <a class="dropdown-item" href="/viewbranch">
+                View Branch
+              </a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/createbranch">
+                Create Branch
               </a>
             </li>
           </ul>
