--- a/Branch/2/Sequrity/finalproject/src/app/gulshanBrance/create-sales-gulshan-brance/create-sales-gulshan-brance.component.html
+++ b/Branch/2/Sequrity/finalproject/src/app/gulshanBrance/create-sales-gulshan-brance/create-sales-gulshan-brance.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
 
-    <h1>Banani Branch</h1>
+    <h1>Gulshan Branch</h1>
     <h2 class="text-center">
       <fa-icon [icon]="faCartPlus"></fa-icon> Create Sales
     </h2>
@@ -119,3 +119,4 @@
     </form>
   </div>
   
+
