--- a/Branch/2/Sequrity/finalproject/src/app/invoice/invoice.component.html
+++ b/Branch/2/Sequrity/finalproject/src/app/invoice/invoice.component.html
@@ -37,7 +37,7 @@
         <div class="row address-section text-center mb-4">
           <div class="col">
             <h4>Address:</h4>
-            <p>Dhanmondi, Dhaka</p>
+            <p>Dhaka</p>
             <p>Bangladesh</p>
           </div>
         </div>
