--- a/Branch/2/Sequrity/finalproject/src/app/navbar/navbar.component.html
+++ b/Branch/2/Sequrity/finalproject/src/app/navbar/navbar.component.html
@@ -196,8 +196,8 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="productDropdown">
             <li>
-              <a class="dropdown-item" href="/viewcutomer">
-                Customer
+              <a class="dropdown-item" href="/salesgulshanbranch">
+                Create Sales Gulshan
               </a>
             </li>
             <li>
