--- a/Branch/2/Sequrity/finalproject/src/app/sales/createsales/createsales.component.html
+++ b/Branch/2/Sequrity/finalproject/src/app/sales/createsales/createsales.component.html
@@ -36,7 +36,7 @@
         <div class="flex-fill col-md-3"><label><fa-icon [icon]="faBox"></fa-icon> Product</label></div>
         <div class="flex-fill col-md-2"><label><fa-icon [icon]="faSortNumericDown"></fa-icon> Quantity</label></div>
         <div class="flex-fill col-md-2"><label><fa-icon [icon]="faDollarSign"></fa-icon> Unit Price</label></div>
-        <div class="flex-fill col-md-2"><label><fa-icon [icon]="faDollarSign"></fa-icon> Discount</label></div>
+        <!-- <div class="flex-fill col-md-2"><label><fa-icon [icon]="faDollarSign"></fa-icon> Discount</label></div> -->
         <div class="flex-fill col-md-2"><label><fa-icon [icon]="faWarehouse"></fa-icon> Stock</label></div>
       </div>
 
@@ -81,9 +81,9 @@
             <input type="number" class="form-control" formControlName="unitprice" readonly>
           </div>
 
-          <div class="form-group flex-fill mr-2 col-md-2">
+          <!-- <div class="form-group flex-fill mr-2 col-md-2">
             <input type="number" class="form-control" formControlName="discount">
-          </div>
+          </div> -->
 
           <!-- Stock Field -->
           <div class="form-group flex-fill col-md-2">
