--- a/Branch/2/Sequrity/finalproject/src/app/navbar/navbar.component.html
+++ b/Branch/2/Sequrity/finalproject/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg  sticky-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="https://i.postimg.cc/SQMbrpzy/download.png" height="60px" alt="" class="rounded-circle">
+      <img src="https://i.postimg.cc/ry95B8nc/download-9.jpg" height="60px" alt="" class="rounded-circle">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,45 +27,8 @@
 
 
 
-        <!-- <ng-container *ngIf="userRole === 'Admin'"> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="/createCategory">
-            <fa-icon [icon]="faPlus"></fa-icon> Create Category
-          </a>
-        </li> -->
-        <!-- </ng-container> -->
-
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="/viewsupplier">
-            <fa-icon [icon]="faPlus"></fa-icon> View Supplier
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/createsupplier">
-            <fa-icon [icon]="faPlus"></fa-icon> Create Supplier
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/viewcustomer">
-            <fa-icon [icon]="faPlus"></fa-icon>View Customer
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="/createcustomer">
-            <fa-icon [icon]="faPlus"></fa-icon>Create Customer
-          </a>
-        </li> -->
-
       </ul>
       <form class="d-flex" role="search">
-
-        <!-- <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">
-            <fa-icon [icon]="faSearch"></fa-icon> Search
-          </button> -->
 
         <a class="nav-link" href="/userprofile">
           <fa-icon [icon]="faUser"></fa-icon> Profile
@@ -85,27 +48,22 @@
   <div class="col-md-2">
     <!-- Left-Aligned Horizontal Sidebar -->
     <div class="horizontal-sidebar  text-white d-flex flex-column align-items-start py-2">
-      <!-- <a href="/home" class="text-white mb-2">
-                <fa-icon [icon]="faHome"></fa-icon> Home
-            </a> -->
-
-
 
       <ng-container *ngIf="this.authService.getUserRole() === 'ADMIN'">
         <div class="dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
             data-bs-toggle="dropdown" aria-expanded="false">
-            Products
+            Medicine
           </a>
           <ul class="dropdown-menu" aria-labelledby="productDropdown">
             <li>
               <a class="dropdown-item" href="/viewproduct">
-                View Products
+                View Medicine
               </a>
             </li>
             <li>
               <a class="dropdown-item" href="/createProduct">
-                Create Product
+                Create Medicine
               </a>
             </li>
           </ul>
@@ -113,24 +71,27 @@
 
 
 
-        <div class="dropdown">
-          <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Sales
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="productDropdown">
-            <li>
-              <a class="dropdown-item" href="/salesdetails">
-                Sales Details
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="/createSales">
-                Create Sales
-              </a>
-            </li>
-          </ul>
-        </div>
+
+        <a class="dropdown-item" href="/salesdetails">
+          Sales Details
+        </a>
+
+
+
+        <a class="dropdown-item" href="/createSales">
+          Sales Dhanmondi Branch
+        </a>
+
+
+        <a class="dropdown-item" href="/salesgulshanbranch">
+          Sales Gulshan Branch
+        </a>
+
+        <a class="dropdown-item" href="/salesbananibranch">
+          Sales Banani Branch
+        </a>
+
+
 
         <div class="dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
@@ -140,7 +101,7 @@
           <ul class="dropdown-menu" aria-labelledby="productDropdown">
             <li>
               <a class="dropdown-item" href="/viewCategory">
-                Generics
+                View Generics
               </a>
             </li>
             <li>
@@ -159,7 +120,7 @@
           <ul class="dropdown-menu" aria-labelledby="productDropdown">
             <li>
               <a class="dropdown-item" href="/viewsupplier">
-                Supplier
+                View Supplier
               </a>
             </li>
             <li>
@@ -170,43 +131,7 @@
           </ul>
         </div>
 
-        <!-- <div class="dropdown">
-          <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Customer
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="productDropdown">
-            <li>
-              <a class="dropdown-item" href="/viewcutomer">
-                Customer
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="/createcustomer">
-                Create Customer
-              </a>
-            </li>
-          </ul>
-        </div> -->
 
-        <div class="dropdown">
-          <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
-            data-bs-toggle="dropdown" aria-expanded="false">
-            Customer
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="productDropdown">
-            <li>
-              <a class="dropdown-item" href="/salesgulshanbranch">
-                Create Sales Gulshan
-              </a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="/salesbananibranch">
-                Create Sales Banani 
-              </a>
-            </li>
-          </ul>
-        </div>
 
         <div class="dropdown">
           <a class="nav-link dropdown-toggle text-white" href="#" id="productDropdown" role="button"
@@ -227,34 +152,18 @@
           </ul>
         </div>
 
-
-
-        <!-- <a class="dropdown-item" href="/createSales">
-          <fa-icon [icon]="faShoppingCart"></fa-icon> Create Sales
-        </a>
-        <a class="dropdown-item" href="/viewsales">
-          <fa-icon [icon]="faChartLine"></fa-icon> View Sales
-        </a> -->
-
       </ng-container>
+
+
       <ng-container *ngIf="this.authService.getUserRole() === 'USER'">
+
         <a class="dropdown-item" href="/viewproduct">
-          <fa-icon [icon]="faEye"></fa-icon> View Products
+          <fa-icon [icon]="faEye"></fa-icon> View Medicine
         </a>
 
       </ng-container>
 
-      <!-- <a class="dropdown-item" href="/vieworder">
-        <fa-icon [icon]="faEye"></fa-icon> View Order
-      </a>
 
-      <a class="dropdown-item" href="/createorder">
-        <fa-icon [icon]="faEye"></fa-icon> Create Order
-      </a>
-
-      <a class="dropdown-item" href="/salesdetails">
-        <fa-icon [icon]="faEye"></fa-icon> Sales Details
-      </a> -->
 
     </div>
 
