--- a/New folder Angular/pointOfSaleAngular/src/app/navbar/navbar.component.html
+++ b/New folder Angular/pointOfSaleAngular/src/app/navbar/navbar.component.html
@@ -151,6 +151,15 @@
             </li>
           </ul>
         </div>
+        <a class="nav-link" href="/dhanmondistock">
+          Dhanmondi Branch Stock
+        </a>
+        <a class="nav-link" href="/bananistock">
+          Banani Branch Stock
+        </a>
+        <a class="nav-link" href="/gulshanstock">
+          Gulshan Branch Stock
+        </a>
 
       </ng-container>
 
@@ -259,6 +268,10 @@
           </ul>
         </div>
 
+        <a class="nav-link" href="/bananistock">
+          Banani Branch Stock
+        </a>
+
       </ng-container>
 
       <ng-container *ngIf="this.authService.getUserRole() === 'PHARMACIST'">
@@ -364,6 +377,10 @@
             </li>
           </ul>
         </div>
+        
+        <a class="nav-link" href="/gulshanstock">
+          Gulshan Branch Stock
+        </a>
 
       </ng-container>
 
