--- a/TodoApplication/app/src/main/res/drawable/shadow.xml
+++ b/TodoApplication/app/src/main/res/drawable/shadow.xml
@@ -3,7 +3,7 @@
     <!-- Outer shadow layer -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#FF0000" /> <!-- Red shadow -->
+            <solid android:color="#23F0C1" /> <!-- Red shadow -->
             <corners android:radius="8dp" />
         </shape>
     </item>
@@ -11,7 +11,7 @@
     <!-- Inner card layer -->
     <item android:left="4dp" android:right="4dp" android:top="4dp" android:bottom="4dp">
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/holo_red_light" />
+            <solid android:color="#22DCBD" />
             <corners android:radius="8dp" />
         </shape>
     </item>
