--- a/TodoApplication/app/src/main/res/layout/activity_write.xml
+++ b/TodoApplication/app/src/main/res/layout/activity_write.xml
@@ -52,6 +52,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Date"
+            android:gravity="center"
             android:inputType="none"
             android:focusable="false"
             android:clickable="true"
