--- a/TodoApplication/app/src/main/res/values/colors.xml
+++ b/TodoApplication/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="background_color">#FFFFFF</color> <!-- White background -->
+    <color name="text_color">#000000</color> <!-- Black text -->
+    <color name="header_color">#6200EE</color> <!-- Purple header -->
 </resources>
